# keyboard-layouts

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: strokes.rs
gen_layouts/: Cargo.toml  build.rs  keylayouts.h
gen_layouts/src/: lib.rs  types.rs
gen_layouts_sys/: Cargo.toml  build.rs  keylayouts.h
gen_layouts_sys/src/: generated.rs  lib.rs  types.rs
src/: hidsim.rs  kbsim.rs  lib.rs
tests/: all_layouts.rs
uhid-sys/: Cargo.toml
uhid-tokio/src/: uhid_device.rs
