[package]
name = "keyboard-scancodes"
version = "0.1.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2018"

[[bin]]
name = "hidsim"
path = "src/hidsim.rs"

[dependencies]
gen_layouts = { path = "gen_layouts" }
bytes = "0.4"
structopt = "0.2"

[dev-dependencies]
linux-uhid-tokio = { path = "uhid-tokio" }
futures = "0.1.15"
tokio-core = "0.1.9"
bytes = "0.4"
pretty_assertions = "0.5.1"
maplit = "1.0.1"
lazy_static = "1.2.0"
