[package]
name = "gen_layouts"
version = "0.1.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2018"
exclude = ["keylayouts.h"]

[dependencies]
lazy_static = "1.2.0"

[build-dependencies]
bindgen = "0.46"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
regex = "1"
proc-macro2 = "0.4"
