[package]
name = "gen_layouts_sys"
version = "0.2.1"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2018"
description = "Generated keyboard layouts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chris-Ricketts/keyboard-layouts"

[dependencies]
lazy_static = "1.2.0"

[build-dependencies]
bindgen = "0.52"
quote = "0.6"
syn = { version = "0.15", features = ["full", "extra-traits"] }
regex = "1"
proc-macro2 = "0.4"
