[package]
name = "gen_layouts_sys"
version = "0.3.0"
authors = ["chris ricketts <chris.ricketts@steribar.com>"]
edition = "2018"
description = "Generated keyboard layouts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Chris-Ricketts/keyboard-layouts"

[features]
generate = ["bindgen", "quote", "syn", "regex", "proc-macro2"]

[dependencies]
lazy_static = "1.2.0"

[build-dependencies]
bindgen = { version = "0.46", optional = true }
quote = { version = "0.6", optional = true }
syn = { version = "0.15", features = ["full", "extra-traits"], optional = true }
regex = { version = "1", optional = true }
proc-macro2 = { version = "0.4", optional = true }
